--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "js-cookie": "^2.2.0",
     "lodash.truncate": "^4.4.2",
     "nprogress": "^0.2.0",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "quill": "^1.3.6",
     "register-service-worker": "^1.5.2",
     "roboto-fontface": "*",
@@ -21,7 +23,8 @@
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.14",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuse": "^0.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
